# synthesizer

./: .gitignore  README.md  pipeline.py  pyproject.toml  synthesizer  utils.py
dustmixer/: __init__.py  dustmixer.py
gridder/: __init__.py  analytical.py  gridder.py
synobs/: __init__.py  scripter.py
synthesizer/: __main__.py  model_loader.py  parser.py  pipeline.py  raytrace.py  to_do_list.txt  utils.py
synthesizer/dustmixer/: __init__.py  bhcoat.py  bhmie.py  dustmixer.py
synthesizer/dustmixer/nk/: astrosil-Draine2003.lnk  c-gra-Draine2003.lnk  c-org-Henning1996.lnk  fes-Henning1996.lnk  h2o-w-Warren2008.lnk
synthesizer/examples/: Workshop_Setup.ipynb  disk_zoo.py  disk_zoo_api.py  disk_zoo_cli.sh  dust_mixing_api.py  dust_mixing_cli.sh  pipeline_dry.sh  ppdisk_synobs_api.py  ppdisk_synobs_cli.sh
synthesizer/gridder/: __init__.py  amr_reader.py  analytical.py  athena_read.py  athena_reader.py  custom_model.py  gridder.py  hydro_reader.py  models.py  sph_reader.py  vector_field.py
synthesizer/models/: mymodel.py
synthesizer/raytrace/: __init__.py  radmc3d.py
synthesizer/synobs/: __init__.py  scripter.py  syn_imager.py
synthesizer/synobs/templates/: alma_1.3mm.py  alma_1.3mm_pol.py  alma_3mm.py  vla_18mm.py  vla_7mm.py  vla_9mm.py
